# cga

./: Cargo.toml  rust-toolchain
examples/: constr.rs
src/: d2.rs  lib.rs  r410.rs  spaces.rs
src/bases/: mod.rs
src/d2/: v1.rs  v2.rs  v3.rs
src/d3/: mod.rs  r410.rs
src/d3/direction/: mod.rs  vector.rs
src/d3/dual/: line.rs  mod.rs  plane.rs  sphere.rs
src/d3/flat/: line.rs  mod.rs  plane.rs  point.rs
src/d3/free/: bivector.rs  mod.rs  trivector.rs  vector.rs
src/d3/round/: circle.rs  mod.rs  pair.rs  point.rs  sphere.rs
src/d3/tangent/: bivector.rs  mod.rs  vector.rs
src/d3/transform/: mod.rs  motor.rs  rotor.rs  translate.rs
src/fast_math/: mod.rs  simd.rs
src/traits/: mod.rs
