[package]
name = "cga"
version = "0.1.0"
authors = ["Angelo Bulfone <mbulfone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[dependencies]
simba = { version = "0.7.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
approx = { version = "0.5.1", default-features = false }
nalgebra = { version = "0.31.4", default-features = false, optional = true }

[features]
default = [ "std" ]
std = ["simba/std", "num-traits/std"]
libm = ["simba/libm", "num-traits/libm"]
unstable = []
repr_simd = []
